MGMT-8738: media disconnected flip again by the state machine Added new validation for media disconnection Added new host field to store the media disconnection state Updated the state machine to check the media disconnection condition before changing the state Added new transitions for media disconnection Created a dedicated media disconnection event
